@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,29 +23,23 @@
 
 package xpath;
 
-import static jaxp.library.JAXPTestUtilities.runWithAllPerm;
-
 import javax.xml.xpath.XPathFactory;
-
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 /*
  * @test
  * @bug 6354969
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow xpath.ClassLoaderTest
  * @run testng/othervm xpath.ClassLoaderTest
  * @summary Test XPathFactory newInstance() with ContextClassLoader.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class ClassLoaderTest {
 
     @Test
     public void testClassLoader() {
-        MyClassLoader cl = runWithAllPerm(() -> new MyClassLoader());
-        runWithAllPerm(() -> Thread.currentThread().setContextClassLoader(cl));
+        MyClassLoader cl = new MyClassLoader();
+        Thread.currentThread().setContextClassLoader(cl);
         XPathFactory xPathFactory = XPathFactory.newInstance();
 
         if (!cl.isCalled()) {
