@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2010, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,11 +23,9 @@
 
 /* @test
  * @bug 4311940
- * @summary Verify that unauthorized ObjectOutputStream and ObjectInputStream
- *          cannot be constructed if they override security-sensitive non-final
- *          methods.
+ * @summary Verify that ObjectOutputStream and ObjectInputStream can be constructed
  * @build AuditStreamSubclass
- * @run main/othervm -Djava.security.manager=allow AuditStreamSubclass
+ * @run main AuditStreamSubclass
  */
 import java.io.*;
 
@@ -39,22 +37,6 @@ class GoodOOS2 extends GoodOOS1 {
     GoodOOS2(OutputStream out) throws IOException { super(out); }
 }
 
-class BadOOS1 extends ObjectOutputStream {
-    BadOOS1(OutputStream out) throws IOException { super(out); }
-    public PutField putFields() throws IOException { return null; }
-}
-
-class BadOOS2 extends ObjectOutputStream {
-    BadOOS2(OutputStream out) throws IOException { super(out); }
-    public void writeUnshared(Object obj) throws IOException {}
-}
-
-class BadOOS3 extends GoodOOS1 {
-    BadOOS3(OutputStream out) throws IOException { super(out); }
-    public void writeUnshared(Object obj) throws IOException {}
-}
-
-
 class GoodOIS1 extends ObjectInputStream {
     GoodOIS1(InputStream in) throws IOException { super(in); }
 }
@@ -63,32 +45,9 @@ class GoodOIS2 extends GoodOIS1 {
     GoodOIS2(InputStream in) throws IOException { super(in); }
 }
 
-class BadOIS1 extends ObjectInputStream {
-    BadOIS1(InputStream in) throws IOException { super(in); }
-    public GetField readFields() throws IOException, ClassNotFoundException {
-        return null;
-    }
-}
-
-class BadOIS2 extends ObjectInputStream {
-    BadOIS2(InputStream in) throws IOException { super(in); }
-    public Object readUnshared() throws IOException, ClassNotFoundException {
-        return null;
-    }
-}
-
-class BadOIS3 extends GoodOIS1 {
-    BadOIS3(InputStream in) throws IOException { super(in); }
-    public Object readUnshared() throws IOException, ClassNotFoundException {
-        return null;
-    }
-}
-
 public class AuditStreamSubclass {
     public static void main(String[] args) throws Exception {
-        if (System.getSecurityManager() == null) {
-            System.setSecurityManager(new SecurityManager());
-        }
+
         ByteArrayOutputStream bout = new ByteArrayOutputStream();
         ObjectOutputStream oout = new ObjectOutputStream(bout);
         oout.flush();
@@ -98,41 +57,5 @@ public class AuditStreamSubclass {
         new GoodOOS2(bout);
         new GoodOIS1(new ByteArrayInputStream(buf));
         new GoodOIS2(new ByteArrayInputStream(buf));
-
-        try {
-            new BadOOS1(bout);
-            throw new Error();
-        } catch (SecurityException ex) {
-        }
-
-        try {
-            new BadOOS2(bout);
-            throw new Error();
-        } catch (SecurityException ex) {
-        }
-
-        try {
-            new BadOOS3(bout);
-            throw new Error();
-        } catch (SecurityException ex) {
-        }
-
-        try {
-            new BadOIS1(new ByteArrayInputStream(buf));
-            throw new Error();
-        } catch (SecurityException ex) {
-        }
-
-        try {
-            new BadOIS2(new ByteArrayInputStream(buf));
-            throw new Error();
-        } catch (SecurityException ex) {
-        }
-
-        try {
-            new BadOIS3(new ByteArrayInputStream(buf));
-            throw new Error();
-        } catch (SecurityException ex) {
-        }
     }
 }
